# ros2-multi-robot-sampling

./: LICENSE  README.md  requirements.txt
adaptive_sample/: CMakeLists.txt  package.xml
adaptive_sample/launch/: multi_robot_launch.py  simple_robot_launch.py  single_robot_send_waypoint_launch.py
adaptive_sample/scripts/: sim_controller.py  visualize.py
adaptive_sample/src/: gp_test.cpp  gp_test_distance.cpp  gp_test_func.cpp  gp_test_pub.cpp  ground_truths.cpp  orchestrator.cpp  orchestrator.hpp  sampler.cpp  sampler.hpp  simple_robot.cpp  simple_robot.hpp
sampling_interfaces/: CMakeLists.txt  package.xml
sampling_interfaces/msg/: SampleReturn.msg  SampleReturnArray.msg
